# Pokonyan-OBSObstruction-Plugin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  QUICKSTART_WINDOWS.md  README.md  build-correct.ps1  build-final.ps1  build-now-fixed.bat  build-now.bat  build-plugin.bat  build-simple.bat  build-with-fullpath.bat  build.bat  build.ps1  build.sh  check-qt-version.ps1  create-distribution.ps1  do-build.bat  fix-qt-version.ps1  generate-libs.ps1  install-cmake.bat  install-plugin.bat  install-qt663-auto.ps1  install-qt663-tls.bat  install-tls-correct.bat  install-tls-plugins.bat  install-vs-tools.ps1  launch.vs.json  run-build.ps1
.claude/: settings.json  settings.local.json
CommentViewer3D/: CMakeLists.txt
CommentViewer3D/include/: comment-3d.hpp  comment-viewer-window.hpp  gl-widget.hpp  physics-engine.hpp  tcp-receiver.hpp
CommentViewer3D/src/: comment-3d.cpp  comment-viewer-window.cpp  gl-widget.cpp  main.cpp  physics-engine.cpp  tcp-receiver.cpp
YouTube-SuperChat-Plugin/: README.txt
data/obstruction_assets/: README.md
distribution/: INSTALL.bat
docs/: API.md  QT_CREATOR_INSTALL_NEXT_STEPS.md  SETUP_GUIDE.md  VCPKG_TROUBLESHOOTING.md  VISUAL_STUDIO_GUI_BUILD.md  VISUAL_STUDIO_SETUP.md
src/: effect-config-dialog.cpp  effect-config-dialog.hpp  effect-config-manager.cpp  effect-config-manager.hpp  effect-config.cpp  effect-config.hpp  effect-system.cpp  effect-system.hpp  obstruction-manager.cpp  obstruction-manager.hpp  plugin-main.cpp  plugin-main.hpp  room-3d-source.cpp  room-3d-source.hpp  settings-dialog.cpp  settings-dialog.hpp  youtube-chat-client.cpp  youtube-chat-client.hpp
